--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.25.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@gsap/react": "^2.1.1",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@nextui-org/button": "^2.0.38",
@@ -24,6 +25,7 @@
     "eslint": "9.11.1",
     "eslint-config-next": "14.2.14",
     "framer-motion": "^11.11.0",
+    "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "micro": "^10.0.1",
     "mongoose": "^8.7.0",
