--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.3.4",
-
     "eslint": "9.11.1",
     "eslint-config-next": "14.2.14",
     "framer-motion": "^11.11.0",
@@ -34,6 +33,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-facebook-pixel": "^1.0.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
@@ -42,7 +42,8 @@
     "slick-carousel": "^1.8.1",
     "stripe": "^17.0.0",
     "styled-components": "^6.1.13",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "universal-analytics": "^0.5.3"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.1.4"
